Fix border spacing and only allow one topic to be expanded

--- a/app/assets/stylesheets/ideas.scss
+++ b/app/assets/stylesheets/ideas.scss
@@ -31,7 +31,7 @@ $table-color-hover: #A3C4D8;
 
 .topic-table {
     width: 100%;
-    border-spacing: 2px;
+    border-spacing: 3px 1px;
 
     tr.topic-title {
         height: 35px;
